syntax ="proto3";

package go.micro.srv.auth;

option go_package ="/auth";

service AuthenticationService {
rpc ParseToken(Token) returns(Response) {}
}
message Token {
string token=1;
}
message Response {
int32 id=1;
string role=2;
}